--- a/.github/workflows/publish-gem.yml
+++ b/.github/workflows/publish-gem.yml
@@ -20,7 +20,7 @@ jobs:
           ruby-version: '3.2'
       - name: Build gem
         run: |
-          gem build github-pages.gemspec
+          gem build jekyll-theme-minimal.gemspec
       - name: Publish
         run: |
           gem push github-pages.gem --key ${{ secrets.PAGES_GEM_PUBLISH }}
