--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ logo: /assets/img/logo.png
 finances: /assets/img/finances.png
 oracle: /assets/img/oracle.png
 ontario: /assets/img/ontario.png
+locked: /assets/img/locked.png
 
 description: Sr. Data Developer @ Ontario Ministry of Natural Resources
 show_downloads: false
