updated job descriptions

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ oracle: /assets/img/oracle.png
 ontario: /assets/img/ontario.png
 locked: /assets/img/locked.png
 
-description: Sr. Data Developer @ Ontario Ministry of Natural Resources
+description: Sr. Data and Analytics Specialist @ Bank of Canada
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
